button color changes done

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1>Gradient</h1>
                 
             <div class="color-div">
-              <button id="btn1">#33333</button>
-              <button  id="btn2">#33333</button>
+              <button id="btn1">#004773</button>
+              <button  id="btn2">#54d542</button>
             </div>
             <div class="copycode">
                 <h2>Copy the color code</h2>
